--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elmish-react",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "My elmish attemp with mini-signals",
   "main": "dist/bundle.js",
   "dependencies": {
@@ -22,6 +22,13 @@
     "architecture",
     "example"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gaearon/react-elmish-example.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gaearon/react-elmish-example/issues"
+  },
   "scripts": {
     "clean": "rimraf dist",
     "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
